export type OrderType = {
  id: string;
  code: string;
  name: string | null;
  priority: number;
  percentage: string;
};
